--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arithmetic-expressions",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Andrew Keig <andrew.keig@gmail.com>",
   "description": "arithmetic-expressions is a simple, fluent interface but building arithmetic expressions.",
   "homepage": "https://github.com/andrewkeig/arithmetic-expressions",
@@ -36,7 +36,5 @@
     "jshint": "^2.5.11",
     "mocha": "^2.0.1"
   },
-  "dependencies": {
-    "mathjs": "^1.1.1"
-  }
+  "dependencies": {}
 }
